[package]
name = "yandex-rasp-rs"
authors = ["KryptonFox"]
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/KryptonFox/yandex-rasp-rs"
homepage = "https://github.com/KryptonFox/yandex-rasp-rs"
description = "Библиотека для взаимодействия с API Яндекс.Расписаний на языке Rust"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0"
chrono = { version = "0.4.39", features = ["alloc", "now", "serde"] }
chrono-tz = "0.10.0"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
